--- a/style.css
+++ b/style.css
@@ -1,5 +1,5 @@
 body {
-    background: linear-gradient(to bottom, red, green, blue);
+    background: linear-gradient();
     width: 100vw;
     height: 100vh;
     overflow: hidden;
@@ -11,4 +11,8 @@ body {
     left: 0;
     width: 100%;
     height: 100%;
+}
+
+#collisionCanvas {
+    
 }
