--- a/style.css
+++ b/style.css
@@ -1,5 +1,5 @@
 body {
-    background: linear-gradient();
+    background: linear-gradient(to bottom, red, green, blue);
     width: 100vw;
     height: 100vh;
     overflow: hidden;
@@ -14,5 +14,5 @@ body {
 }
 
 #collisionCanvas {
-    
+    opacity: 0
 }
